Updates from Overleaf

--- a/oopsla21/abstract.tex
+++ b/oopsla21/abstract.tex
@@ -1,5 +1,7 @@
 %\begin{abstract}
 The NUMA architecture accommodates the hardware trend of the increasing number of CPU cores. It also introduces hardware heterogeneity that requires the cooperation of memory allocators to achieve the good performance for multithreaded applications. Unfortunately, none of existing memory allocators support the NUMA architecture very well. 
-This paper proposes a novel memory allocator--\NM{}, with fine-grained memory management that is designed for the NUMA architecture. \NM{} first proposes an origin-based memory management to ensure the locality of memory allocations. It further introduces node-balanced thread binding and an interleaved heap to reduce load imbalance among different nodes. 
+This paper presents a novel memory allocator--\NM{}, with fine-grained memory management that is designed for the NUMA architecture. \NM{} first proposes an origin-based memory management to ensure the locality of memory allocations. It further introduces node-balanced thread binding and an interleaved heap to reduce the load imbalance among different nodes. 
 %\NM{} also designs an explicit huge page support to employ the benefits provided by huge pages. 
-According to our extensive evaluation, \NM{} has the best performance among all evaluated allocators. \todo{It is significantly faster than the second best one, around 12\% on average on an 8-node machine, and is 15\% faster than the default Linux allocator. For the best case, \NM{} achieves up to $6.4\times$ performance speedup comparing to the default Linux allocator, and $4.4\times$ faster than the second-best one (TCMalloc). \NM{} is also scalable to 128 threads, and is ready for the deployment}.
+According to our extensive evaluation, \NM{} has the best performance among all evaluated allocators. \toconfirm{It is significantly faster than the second best one, around 10\% on average on an 8-node machine, and is 14\% faster than the default Linux allocator. For the best case, \NM{} achieves up to $2.18\times$ performance speedup comparing to the default Linux allocator, and $1.96\times$ faster than the second-best one (jemalloc). \NM{} is also scalable to 128 threads, and is ready for the deployment.}
+
+\todo{Origin: It is significantly faster than the second best one, around 12\% on average on an 8-node machine, and is 15\% faster than the default Linux allocator. For the best case, \NM{} achieves up to $6.4\times$ performance speedup comparing to the default Linux allocator, and $4.4\times$ faster than the second-best one (TCMalloc). \NM{} is also scalable to 128 threads, and is ready for the deployment}.
