--- a/oopsla21/intro.tex
+++ b/oopsla21/intro.tex
@@ -9,7 +9,9 @@ The memory allocator is one such component that could help solve these challenge
 However, general-purpose memory allocators, such as dlmalloc~\citep{dlmalloc},  Hoard~\citep{Hoard}, TCMalloc~\citep{tcmalloc}, jemalloc~\citep{jemalloc}, SuperMalloc~\citep{supermalloc} and Scalloc~\citep{Scalloc}, were designed for symmetric multiprocessing machines without considering the heterogeneity of the underlying hardware~\citep{mimalloc}. As a result, they can not achieve good performance, based on existing work~\citep{tcmallocnew, yang2019jarena} and our evaluation. In 2008, Kaminski built the first NUMA-aware memory allocator on top of TCMalloc~\citep{tcmallocnew}, called as \TN{} in the remainder of this paper. After that, multiple allocators with NUMA support were developed~\citep{ kim2013node, yang2019jarena, mimalloc}, but they typically take a very similar design as \TN{} , as further discussed in Section~\ref{sec:related}. Therefore, only \TN{}'s design is further described here. 
 
 %, but without considering interconnect congestion and node imbalance that may also significantly affect the performance. 
-\TN{} inherits per-thread cache from TCMalloc, but adding a freelist array and a page-span for each NUMA node. Allocations will be satisfied in an order from a per-thread cache, per-node freelist, and then per-node page-span. Initially, the memory of each page-span will be mapped to the node so that physical memory is also allocated from the same node. However, \textit{TCMalloc-NUMA has multiple issues that may significantly affect its effectiveness}. First, it did not control deallocations of objects. A freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\citep{tcmalloc}. However, if such an object is originated from a remote node initially, especially in producer-consumer model, this clearly will cause unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only force this thread to access its stack remotely but also reload all data that are already in the cache of its original node.  Further, after the migration, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. Based on our knowledge, none of existing NUMA allocators solves these issues as well. 
+\TN{} inherits per-thread cache from TCMalloc, but adding a freelist array and a page-span for each NUMA node. Allocations will be satisfied in an order from a per-thread cache, per-node freelist, and then per-node page-span. Initially, the memory of each page-span will be mapped to the node so that physical memory is also allocated from the same node. However, \textit{TCMalloc-NUMA has multiple issues that may significantly affect its effectiveness}. First, it did not control deallocations of objects. A freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\citep{tcmalloc}. \toconfirm{However, if such an object originates from a remote node initially, especially in the producer-consumer model, it obviously results in unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only forces the thread to access its stack remotely but also reloads all the data that are already in the cache of its original node. Further, after migration, all deallocated objects of the thread are later put into the freelist of the new node, causing unnecessary remote accesses. To the best of our knowledge, none of the existing NUMA allocators address these issues well.}
+
+\todo{Origin: However, if such an object is originated from a remote node initially, especially in producer-consumer model, this clearly will cause unnecessary remote accesses. Second, it did not control the placement of threads: a thread can be migrated to a remote node upon synchronizations or system calls, which not only force this thread to access its stack remotely but also reload all data that are already in the cache of its original node.  Further, after the migration, all deallocated objects by this thread will be placed into the new node's freelist afterwards, causing unnecessary remote accesses. Based on our knowledge, none of existing NUMA allocators solves these issues as well.}
 
 \textbf{This paper proposes a novel memory allocator -- \NM{} -- that considers both hardware heterogeneity and allocation/deallocation attributes, with its fine-grained memory management}. \NM{} not only deals with hardware heterogeneity, but also employs different policies for objects with different attributes, such as share-ability, sizes, and origin. We proposes multiple mechanisms that improve both load balance and locality, as detailed in the following.   
 
@@ -34,7 +36,7 @@ In the future, we plan to support user-controlled binding.
 
 %It also reduces memory consumption of huge pages by making multiple threads share the same bag, overcoming one issue of Scalloc~\citep{Scalloc}. 
 
-We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TCMalloc~\citep{tcmalloc}, jemalloc~\citep{jemalloc}, Intel TBB~\citep{tbb}, Scalloc~\citep{Scalloc}, and mimalloc~\citep{mimalloc}. \todo{\NM{} achieves around 15\% speedup comparing to the default Linux allocator, which is also 12\% faster than the second-best one (e.g., TCMalloc). For the best case, \NM{} runs up to $6.4\times$ faster than the default allocator, and $4.6\times$ faster than the second-best one (TCMalloc)}. \NM{} is much more scalable than other allocators based on our evaluation. \NM{} is ready for practical employment, due to its high performance and good scalability. \\
+We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TCMalloc~\citep{tcmalloc}, jemalloc~\citep{jemalloc}, Intel TBB~\citep{tbb}, Scalloc~\citep{Scalloc}, and mimalloc~\citep{mimalloc}. \toconfirm{\NM{} achieves around 14\% speedup comparing to the default Linux allocator, which is also 10\% faster than the second-best one (e.g., jemalloc). For the best case, \NM{} runs up to $2.18\times$ faster than the default allocator, and $1.96\times$ faster than the second-best one (jemalloc)}. \NM{} is much more scalable than other allocators based on our evaluation. \NM{} is ready for practical employment, due to its high performance and good scalability. \\
 
 \textbf{Overall, this paper makes the following contributions:} 
 
@@ -49,5 +51,4 @@ We have performed extensive evaluation on synthetic and real applications, and c
 
 \end{itemize}
 
-The remainder of this paper is organized as follows. Section~\ref{sec:overview} introduces the OS support for the NUMA architecture and common designs of memory allocators. Section~\ref{sec:implement} focuses on the design and implementation of \NM{}. After that, Section~\ref{sec:evaluation} describes its experimental evaluation, and Section~\ref{sec:limit} discusses the limitation of \NM{}. In the end, Section\ref{sec:related} discusses some relevant related work, and then Section~\ref{sec:conclusion} concludes. 
-
+The remainder of this paper is organized as follows. Section~\ref{sec:background} introduces the OS support for the NUMA architecture and common designs of memory allocators. Section~\ref{sec:implement} focuses on the design and implementation of \NM{}. After that, Section~\ref{sec:evaluation} describes its experimental evaluation, and Section~\ref{sec:limit} discusses the limitation of \NM{}. In the end, Section~\ref{sec:related} discusses some relevant work, and then Section~\ref{sec:conclusion} concludes. 
