--- a/oopsla21/overview.tex
+++ b/oopsla21/overview.tex
@@ -1,16 +1,18 @@
 \section{Background}
-\label{sec:overview}
+\label{sec:background}
 
 %This section introduces some background that is necessary for \NM{}. 
-This section discusses existing OS support for the NUMA architecture, and then discusses some common designs of memory allocators that are adopted by \NM{}.  
+This section discusses existing OS support for the NUMA architecture, and then discusses some common designs of existing memory allocators that are adopted by \NM{}.  
 
 \subsection{NUMA Architecture}
 
 \label{sec:numa}
 
-Traditional computers are using the Uniform Memory Access (UMA) model that all CPU cores are sharing a single memory controller, where any core can access the memory with the same latency (uniformly). However, the UMA architecture cannot accommodate the hardware trend with the increasing number of cores, since all of them may compete for the same memory controller. Therefore, the performance bottleneck is the memory controller in many-core machines, since a task cannot proceed without getting its necessary data from the memory. 
+Traditional computers are using the Uniform Memory Access (UMA) model that all CPU cores are sharing a single memory controller, where any core can access the memory with the same latency (uniformly). However, the UMA architecture cannot accommodate the hardware trend with the increasing number of cores, since all cores may compete for the same memory controller. 
+%Therefore, the performance bottleneck is the memory controller in many-core machines, since 
+A task cannot proceed without getting its necessary data from the memory. 
 
-The Non-Uniform Memory Access (NUMA) architecture is proposed to solve the scalability issue, due to its decentralized nature. Instead of making all cores waiting for the same memory controller, the NUMA architecture typically is installed with multiple memory controllers, where a group of CPU cores has its memory controller (called as a node). Due to multiple memory controllers, the contention for the memory controller could be largely reduced and therefore the scalability could be improved correspondingly. However, the NUMA architecture also has multiple sources of performance degradations~\citep{Blagodurov:2011:CNC:2002181.2002182}, including \textit{Cache Contention}, \textit{Node Imbalance}, \textit{Interconnect Congestion}, and \textit{Remote Accesses}. 
+The Non-Uniform Memory Access (NUMA) architecture is to solve the scalability issue, due to its decentralized nature. Instead of making all cores waiting for the same memory controller, the NUMA architecture typically is installed with multiple memory controllers, where a group of CPU cores have its memory controller (called as a node). Due to multiple memory controllers, the contention for the memory controller could be largely reduced and therefore the scalability could be improved correspondingly. However, the NUMA architecture also has multiple sources of performance degradations~\citep{Blagodurov:2011:CNC:2002181.2002182}, including \textit{Cache Contention}, \textit{Node Imbalance}, \textit{Interconnect Congestion}, and \textit{Remote Accesses}. 
 
 \textbf{Cache Contention:} the NUMA architecture is prone to cache contention that multiple tasks may compete for the shared cache. Cache contention will introduce more serious performance issue if the data has to be loaded from a remote node. 
  
@@ -29,7 +31,7 @@ Operating System already supports the NUMA architecture, especially on task sche
 \subsection{Common Designs of Memory Allocators}
 \label{sec:commondesign}
 
-Memory allocators share some common designs. First, most allocators manage objects differently based on the size of objects. For big objects that are typically unusual, allocators may request objects from the OS directly and return them to the OS directly upon deallocation~\citep{Hoard}. On the other hand, small objects will be tracked in freelists based on size classes. The method of managing small objects can be further classified into multiple categories, such as sequential, BiBOP, and region-based allocators~\citep{DieHarder, Gay:1998:MME:277650.277748}. For region-based allocators, all allocated objects within the same region are deallocated together do not belong to general-purpose allocators~\citep{Gay:1998:MME:277650.277748}. For sequential allocators, subsequent memory allocations are satisfied in a continuous memory block~\citep{Cling}. BiBOP-style allocators, which stands for ''Big Bag of Pages''~\citep{hanson1980portable}, utilize one or multiple continuous pages as a ``bag'' that hold objects of the same size class. Many performance-oriented allocators, such as TCMalloc~\citep{tcmalloc}, \texttt{jemalloc}~\citep{jemalloc}, Hoard~\citep{Hoard}, Scalloc~\citep{Scalloc}, and most of secure allocators, such as OpenBSD~\citep{openbsd} and DieHarder~\citep{DieHarder}, belong to this category. 
+Memory allocators share some common designs. First, most allocators manage objects differently based on the size of objects. For big objects that are typically unusual, allocators may request objects from the OS directly and return them to the OS directly upon deallocation~\citep{Hoard}. On the other hand, small objects will be tracked in freelists based on size classes. The method of managing small objects can be further classified into multiple categories, such as sequential, BiBOP, and region-based allocators~\citep{DieHarder, Gay:1998:MME:277650.277748}. For region-based allocators, all objects within the same region are deallocated together~\citep{Gay:1998:MME:277650.277748}.  But region-based allocators do not belong to general-purpose allocators. For sequential allocators, subsequent memory allocations are satisfied in a continuous memory block~\citep{Cling}. BiBOP-style allocators, which stands for ''Big Bag of Pages''~\citep{hanson1980portable}, utilize one or multiple continuous pages as a ``bag'' that hold objects of the same size class. Many performance-oriented allocators, such as TCMalloc~\citep{tcmalloc}, \texttt{jemalloc}~\citep{jemalloc}, Hoard~\citep{Hoard}, Scalloc~\citep{Scalloc}, and most of secure allocators, such as OpenBSD~\citep{openbsd} and DieHarder~\citep{DieHarder}, belong to this category. 
 
  
 
